--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: nginx:1.19.6-alpine
     depends_on:
       - php-fpm
+      - frontend
     restart: unless-stopped
     ports:
       - ${NGINX_PORT:-80}:80
@@ -33,7 +34,7 @@ services:
     volumes:
       - ./backend:/app
       - composer:/root/.composer/cache
-   
+
   postgres:
     build:
       context: ./docker
@@ -49,6 +50,17 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-test_db_password}
       PGDATA: /var/lib/postgresql/data/pgdata
 
+  frontend:
+    container_name: ${APP_NAME}_frontend
+    restart: "no"
+    volumes:
+      - ./frontend/:/app
+      - node_modules:/app/node_modules/
+    build:
+      context: ./frontend
+    command: npm run dev
+
 volumes:
   composer:
   postgres:
+  node_modules:
