--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
     build:
       context: ./frontend
     command: npm run dev
+    environment:
+      - VITE_API_URL=${VITE_API_URL}
 
 volumes:
   composer:
